--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,6 +1,5 @@
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>{{ 'CARDS_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
