--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -1,6 +1,5 @@
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>{{ 'ITEM_CREATE_TITLE' | translate }}</ion-title>
     <ion-buttons start>
       <button ion-button (click)="cancel()">
@@ -15,33 +14,262 @@
         <span color="primary" showWhen="ios">
           {{ 'DONE_BUTTON' | translate }}
         </span>
-        <ion-icon name="md-checkmark" showWhen="core,android,windows"></ion-icon>
+        <p showWhen="core,android,windows">Done</p>
+        <!--<ion-icon name="md-checkmark" showWhen="core,android,windows">Done</ion-icon>-->
       </button>
     </ion-buttons>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content>
+<ion-content class="bg-style">
   <form *ngIf="form" [formGroup]="form" (ngSubmit)="createItem()">
-    <input type="file" #fileInput style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
-    <div class="profile-image-wrapper" (click)="getPicture()">
-      <div class="profile-image-placeholder" *ngIf="!this.form.controls.profilePic.value">
-        <ion-icon name="add"></ion-icon>
-        <div>
-          {{ 'ITEM_CREATE_CHOOSE_IMAGE' | translate }}
-        </div>
-      </div>
-      <div class="profile-image" [style.backgroundImage]="getProfileImageStyle()" *ngIf="this.form.controls.profilePic.value"></div>
-    </div>
-    <ion-list>
-      <ion-item>
-        <ion-input type="text" placeholder="{{ 'ITEM_NAME_PLACEHOLDER' | translate }}" formControlName="name"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input type="text" placeholder="{{ 'ITEM_ABOUT_PLACEHOLDER' | translate }}" formControlName="about"></ion-input>
-      </ion-item>
-    </ion-list>
+    <ion-slides pager paginationType="progress">
+      <!------------------------------  Profile  ------------------------------>
+      <ion-slide>
+        <ion-card class="card-cv">
+          <ion-item-divider color="secondary">General Information</ion-item-divider>
+            <input type="file" #fileInput style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
+            <div class="profile-image-wrapper" (click)="getPicture()">
+              <div class="profile-image-placeholder" *ngIf="!this.form.controls.profilePic.value">
+                <ion-icon name="add"></ion-icon>
+                  <div>
+                    {{ 'ITEM_CREATE_CHOOSE_IMAGE' | translate }}
+                  </div>
+              </div>
+              <div class="profile-image" [style.backgroundImage]="getProfileImageStyle()" *ngIf="this.form.controls.profilePic.value"></div>
+            </div>
+            <ion-list>
+              <ion-item>
+                <ion-label class="label-cv" floating>{{ 'ITEM_NAME_PLACEHOLDER' | translate }}</ion-label>
+                <ion-input class="input-cv" type="text"  formControlName="name"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>{{ 'ITEM_LASTNAME_PLACEHOLDER' | translate }}</ion-label>
+                <ion-input class="input-cv" type="text"  formControlName="lastname"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>Title</ion-label>
+                <ion-input class="input-cv" type="text" formControlName="title">Title</ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>About</ion-label>
+                <ion-textarea class="textarea-cv" type="text" formControlName="about"></ion-textarea>
+              </ion-item>
+              <!--
+             <ion-item>
+                <ion-label  color="primary">Birthday</ion-label>
+                <ion-datetime displayFormat="MMM DD YYYY" formControlName="birthday"></ion-datetime>
+              </ion-item>
+              -->
+              <ion-item>
+                <ion-label class="label-cv" floating>Email</ion-label>
+                <ion-input class="input-cv" type="text"  formControlName="about"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>Phone</ion-label>
+                <ion-input class="input-cv" type="text"  formControlName="about"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>Mobil</ion-label>
+                <ion-input class="input-cv" type="text"  formControlName="about"></ion-input>
+              </ion-item>
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="secondary" outline>
+                      Save
+                    </button>
+                  </ion-col>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="myyellow" outline>
+                      clear
+                    </button>
+                  </ion-col>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="danger" outline>
+                      Delete
+                    </button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-list>
+        </ion-card>
+        <button class="btn-cv" ion-button item-end icon-left color="secondary">
+          <ion-icon name="add"></ion-icon>
+          Add
+        </button>
+      </ion-slide>
+      <!------------------------------  Experience  ------------------------------>
+      <ion-slide>
+        <ion-card class="card-cv">
+          <ion-list>
+            <ion-item-group>
+              <ion-item-divider color="secondary">Experience</ion-item-divider>
+              <ion-item>
+                <ion-label class="label-cv" color="secondary" floating>Company name</ion-label>
+                <ion-input type="text" class="input-cv" formControlName="name"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>Position</ion-label>
+                <ion-input type="text" class="input-cv" formControlName="name"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv">Start Date</ion-label>
+                <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv">Ends</ion-label>
+                <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>{{ 'ITEM_ABOUT_PLACEHOLDER' | translate }}</ion-label>
+                <ion-textarea type="text" class="input-cv" formControlName="about"></ion-textarea>
+              </ion-item>
+              <ion-item>
+                <ion-label class="label-cv" floating>Technologies</ion-label>
+                <ion-input type="text" class="input-cv" formControlName="name"></ion-input>
+              </ion-item>
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="secondary" outline>
+                      Save
+                    </button>
+                  </ion-col>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="myyellow" outline>
+                      clear
+                    </button>
+                  </ion-col>
+                  <ion-col>
+                    <button class="btn-cv" ion-button color="danger" outline>
+                      Delete
+                    </button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item-group>
+
+          </ion-list>
+        </ion-card>
+        <button class="btn-cv" ion-button item-end icon-left color="secondary">
+          <ion-icon name="add"></ion-icon>
+          Add
+        </button>
+        <!--<cvexperience></cvexperience>-->
+      </ion-slide>
+      <!------------------------------  Education & Courses  ------------------------------>
+      <ion-slide>
+        <ion-card class="card-cv">
+          <ion-list>
+            <ion-item-group>
+              <ion-item-divider color="secondary">Education & Courses</ion-item-divider>
+            <ion-item>
+              <ion-label class="label-cv" floating>Name</ion-label>
+              <ion-input class="input-cv" type="text"  formControlName="name"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv" floating>where</ion-label>
+              <ion-input class="input-cv" type="text"  formControlName="name"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv">Start Date</ion-label>
+              <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv">Ends</ion-label>
+              <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+            </ion-item>
+            </ion-item-group>
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="secondary" outline>
+                    Save
+                  </button>
+                </ion-col>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="myyellow" outline>
+                    clear
+                  </button>
+                </ion-col>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="danger" outline>
+                    Delete
+                  </button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-list>
+        </ion-card>
+        <button class="btn-cv" ion-button color="secondary">
+          <ion-icon name="add"></ion-icon>
+          Add
+        </button>
+      </ion-slide>
+      <!------------------------------  Conferences  ------------------------------>
+      <ion-slide>
+        <ion-card class="card-cv">
+          <ion-list>
+            <ion-item-group>
+              <ion-item-divider color="secondary">Education & Courses</ion-item-divider>
+              <ion-item>
+              <ion-label class="label-cv" floating>Name</ion-label>
+              <ion-input class="input-cv" type="text"  formControlName="name"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv" floating>where</ion-label>
+              <ion-input class="input-cv" type="text"  formControlName="name"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv">Start Date</ion-label>
+              <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+            </ion-item>
+            <ion-item>
+              <ion-label class="label-cv">Ends</ion-label>
+              <ion-datetime class="input-cv" displayFormat="MMM YYYY"></ion-datetime>
+            </ion-item>
+              <button class="btn-cv" ion-button item-end icon-left color="secondary">
+              <ion-icon name="add"></ion-icon>
+              Add
+            </button>
+            </ion-item-group>
+          </ion-list>
+          <ion-list>
+            <ion-list-header>Add Skills</ion-list-header>
+            <button class="btn-cv" ion-button item-end icon-left color="secondary">
+              <ion-icon name="add"></ion-icon>
+              Add
+            </button>
+          </ion-list>
+
+          <ion-list>
+            <ion-list-header>Social Networks</ion-list-header>
+            <button class="btn-cv" ion-button item-end icon-left color="secondary">
+              <ion-icon name="add"></ion-icon>
+              Add
+            </button>
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="secondary" outline>
+                    Save
+                  </button>
+                </ion-col>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="myyellow" outline>
+                    clear
+                  </button>
+                </ion-col>
+                <ion-col>
+                  <button class="btn-cv" ion-button color="danger" outline>
+                    Delete
+                  </button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-list>
+        </ion-card>
+      </ion-slide>
+    </ion-slides>
   </form>
 </ion-content>
