--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -155,7 +155,7 @@
           <ion-icon name="add"></ion-icon>
           Add
         </button>
-        <!--<cvexperience></cvexperience>-->
+        <cvexperience></cvexperience>
       </ion-slide>
       <!------------------------------  Education & Courses  ------------------------------>
       <ion-slide>
