--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -142,7 +142,7 @@
 
           </ion-list>
         </ion-card>
-        <button class="btn-cv" ion-button item-end icon-left color="secondary">
+        <button class="btn-cv" ion-button item-end icon-left color="secondary" (click)="addItem()">
           <ion-icon name="add"></ion-icon>
           Add
         </button>
