--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,8 +12,8 @@
     <ion-card class="ion-card">
       <ion-list>
           <ion-item>
-            <ion-label floating>{{ 'EMAIL' | translate }}</ion-label>
-            <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+            <ion-label class="label-login" floating>{{ 'EMAIL' | translate }}</ion-label>
+            <ion-input class="input-login" type="email" [(ngModel)]="account.email" name="email"></ion-input>
           </ion-item>
 
         <!--
@@ -25,12 +25,14 @@
         </ion-item>
         -->
         <ion-item>
-          <ion-label floating>{{ 'PASSWORD' | translate }}</ion-label>
-          <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
+          <ion-label class="label-login" floating>
+            {{ 'PASSWORD' | translate }}
+          </ion-label>
+          <ion-input class="input-login" type="password" [(ngModel)]="account.password" name="password"></ion-input>
         </ion-item>
 
         <div padding>
-          <button class="login" ion-button color="secondary"  large >{{ 'LOGIN_BUTTON' | translate }}</button>
+          <button class="login" ion-button color="secondary"  large full >{{ 'LOGIN_BUTTON' | translate }}</button>
         </div>
       </ion-list>
     </ion-card>
