--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -16,8 +16,10 @@
     </ion-list>
   </ion-card>
 
-  <ion-card class="ion-card">
+    <ion-card class="profile-card">
+      <ion-card-header color="red">Experience</ion-card-header>
   <div class="item-detail" padding>
+    vvvvv
   </div>
   </ion-card>
 </ion-content>
